2007-09-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:      Check the statusbar exists before using it.
	* tkchat_rss.tcl:  Added requirement for the uri package.
	                   Fixed Dutch message typo.
	                   Fixed typo rss dialog (focus, not raise)
	                   RSS active tag was excessive - just the title

2007-09-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Use native scrollbars on Aqua and avoid ttk ones. 

2007-09-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:          Added support for checking RSS/ATOM feeds
	* tkchat_rss.tcl:      with understated notification in the status
	* rssrdr/rssrdr.tcl:   bar when something new arrives.
	* rssrdr/pkgIndex.tcl:

2007-09-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:  Added fallback to IRC in the event of being unable
	to reach the Jabber server using picoirc. Added a -irc commandline
	option to force it for testing.
	* picoirc/picoirc.tcl:  Embeddable IRC client package based upon
	* picoirc/pkgIndex.tcl: the Wiki's picoirc code.

2007-09-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Support for checking the validity of the SSL
	certificate chain and for dsplaying all the certificates in the
	chain. Requires patch to the jlibssl used by tkchat. Option on 
	the logon screen to disable verification.

2007-08-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* choosefont/Tcl/dkf_chooseFont.tcl: Applied patch from Emiliano
	to handle grid anchor differences between 8.4 and 8.5.

2007-08-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Patch from Steve Landers to enhance MacOSX support.

2007-08-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Avoid mishandling chatstate (xep-0085) notification 
	messages if we get them.

2007-08-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:  Use a procedure to create all our dialogs and get